fix: can't click on mobile menu links

--- a/website-challenge-2-sunnyside-landing/app/scss/_components.scss
+++ b/website-challenge-2-sunnyside-landing/app/scss/_components.scss
@@ -64,8 +64,9 @@
 		text-decoration: none;
 	}
 }
-.mobile-btn {
+.btn--yellow {
 	@extend .btn;
+	color: v.$clr-text-900 !important;
 	background-color: v.$clr-primary-yellow;
 
 	&:hover {
